# nequip

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint  AUTHORS.md  CHANGELOG.md  CITATION.bib  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  conda-env.yaml  gmm_script.py  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  question.md
.github/workflows/: lammps-mliap-tests.yml  lint.yaml  release.yaml  tests.yml  tests_develop.yml  tests_stress.yml
configs/: 3bpa.yaml  README.md  example.yaml  full.yaml  get_tutorial_data.py  minimal-stress.yaml  minimal.yaml  minimal_distributed.yaml  minimal_eng.yaml  minimal_gmm.yaml  minimal_pair.yaml  minimal_stress.yaml  minimal_toy_emt.yaml  ocp_is2re.yaml  ocp_s2ef.yaml  requeue.yaml  restart.yaml  samsung.yaml  schedulefree.yaml  tutorial.yaml
docs/: README.md  cite.rst  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: ase.rst  callbacks.rst  data.rst  data_fields.rst  data_modifiers.rst  data_stats.rst  data_transforms.rst  datamodule.rst  dataset.rst  ddp.rst  lightning_module.rst  metrics.rst  model.rst  nequip.rst  nequip_model.rst  nn.rst  optimizers.rst  param_groups.rst  save_model.rst  torchsim.rst  train.rst  trainer.rst
docs/commandline/: commands.rst
docs/dev/: contributing.md  dev.rst  extending.md  extension_packages.rst  tools.rst  under_the_hood.rst  understanding_nequip.rst
docs/errors/: errors.md  errors.rst
docs/faq/: FAQ.md  FAQ.rst
docs/guide/: FAQ.rst  advanced.md  advanced.rst  advanced_training.md  commands.rst  config.md  conventions.md  conventions.rst  data.md  dataset.md  dataset.rst  ddp_training.md  faq.md  faq_errors.md  files.md  guide.rst  install.md  intro.rst  irreps.rst  loss.md  metrics.md  migrate.rst  model.md  multitask_training.md  openequivariance.md  pt2_compilation.md  stats_metrics.md  tf32.md  troubleshoot.md  upgrading.md  wandb_example.md  workflow.md
docs/howto/: conventions.md  dataset.rst  howto.rst
docs/installation/: git.rst  install.rst  pip.rst
docs/integrations/: all.rst  ase.md  lammps.md  openmm.md  other.md  torchsim.md  wandb.md
docs/introduction/: intro.md  intro.rst
docs/lammps/: all.rst  ase.rst  lammps.rst
docs/options/: HOWTO.md  dataset.rst  general.rst  logging.rst  model.rst  options.rst  training.rst
docs/yaml/: yaml.rst
examples/: compare_neighborlist.py  custom_dataset.py  gmm_script.py  minimal_inference.py  monkeypatch.py  parity_plot.py  plot_dimers.py  rdf.py
examples/lj/: README.md  lj.py  lj.yaml
examples/lmdb_dataset_conversion/: README.md  data.yaml  datamodule_to_lmdb.py  example_lmdb_conversion.py
examples/wandb_sweep/: sweep.yaml
misc/: compare_neighborlist.py  plot_dimers.py
misc/lmdb_dataset_conversion/: README.md  data.yaml  datamodule_to_lmdb.py  example_lmdb_conversion.py
misc/wandb_sweep/: sweep.yaml
nequip/: __init__.py  _version.py  deploy.py
nequip/_scripts/: deploy.py  requeue.py  restart.py  train.py
nequip/ase/: __init__.py  nequip_calculator.py  nosehoover.py
nequip/data/: AtomicData.py  AtomicDataDict.py  __init__.py  _build.py  _key_registry.py  _keys.py  _neighbors.py  _nl.py  _sampler.py  _statistics.py  _test_data.py  _util.py  ase.py  compile_utils.py  dataloader.py  dataset.py  dict.py  misc.py  modifier.py  stats.py  stats_manager.py  transforms.py
nequip/datasets/: __init__.py  aspirin.py  emt.py  qm9.py  single_point_lmdb.py  trajectory_lmdb.py  water.py
nequip/dynamics/: md_utils.py  nequip_calculator.py  nosehoover.py
nequip/integrations/: __init__.py  ase.py  mixins.py  torchsim.py  utils.py
nequip/model/: __init__.py  _build.py  _eng.py  _gmm.py  _grads.py  _pair_potential.py  _scaling.py  _weight_init.py  builder_utils.py  energy_modules.py  from_save.py  model_metadata.py  modify_utils.py  nequip_models.py  pair_potential.py  param_groups.py  utils.py
nequip/models/: __init__.py  _eng.py
nequip/nn/: __init__.py  _atomwise.py  _concat.py  _convnet.py  _convnetlayer.py  _ghost_exchange_base.py  _ghost_exchange_lmp_mliap.py  _gmm.py  _grad_output.py  _graph_mixin.py  _graph_model.py  _interaction_block.py  _rescale.py  _tp_scatter_base.py  _util.py  mlp.py  (+18 more)
scripts/: deploy.py  requeue.py  restart.py  train.py  train_ocp_is2re.py  train_ocp_s2ef.py
tests/: conftest.py
tutorial/: Nequip-Tutorial.ipynb  tutorial.yaml
(+312 files in other folders)
